--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@
 }
 
 .boton{
-    border: 1px solid red !important;
+    border: 1px solid rgb(247, 83, 83) !important;
     background-color: rgb(235, 157, 157) !important;
+    border-radius: 8px;
 }
