--- a/css/styles.css
+++ b/css/styles.css
@@ -35,3 +35,34 @@
     background-color: rgb(235, 157, 157) !important;
     border-radius: 8px;
 }
+
+.bg-body-tertiary{
+    display: flex;
+    justify-content: center;
+}
+
+.espacio3{
+    margin-bottom: 150px;
+}
+.color{
+    color: #882728;
+    background-color: rgb(248, 241, 231);
+    padding: 50px;
+}
+
+.iconoSubir{
+    color: red;
+    display: flex;
+    justify-content: flex-end;
+    font-size: 40px;
+    padding: 50px;
+}
+
+.parrafo{
+    text-align: center;
+    margin-top: 20px;
+}
+
+.margenDiv{
+    margin-bottom: 50px;
+}
